--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VisitMe</title>
-</head>
-<body>
-    <h1>this is the landing page</h1>
-</body>
-</html>
+<%- layout('layouts/boilerplate') %>
+<h1>visitMe Landing Page</h1>
