--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,26 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VisitMe: Login</title>
-</head>
-<body>
-    <h1>Login</h1>
-    <form action="/login" method="POST">
-        <div>
-            <label for="username">Username</label>
-            <input id="username" name="username" type="text" required>
+<%- layout('layouts/boilerplate') %>
+<div class="row">
+    <div class="col-4 offset-4">
+        <div class="card">
+            <div class="card-header text-center">
+                <h3>Login</h3>
+            </div>
+            <div class="card-body">
+                <form action="/login" method="POST">
+                    <div class="mb-3">
+                        <label for="username" class="form-label">Username</label>
+                        <input id="username" name="username" type="text" class="form-control" required>
+                    </div>
+                
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" id="password" name="password" class="form-control" required>
+                    </div>
+                
+                    <div class="text-center">
+                        <button class="btn btn-success">Login</button>
+                    </div>
+                </form>
+            </div>
         </div>
-
-        <div>
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-
-        <div>
-            <button>Login</button>
-        </div>
-    </form>
-</body>
-</html>
+    </div>
+</div>
