--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,71 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VisitMe</title>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css' rel='stylesheet' />
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
+<%- layout('layouts/boilerplate')  %>
+<style>
+    #map {
+        /* position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%; */
+        height: 60vh;
+    }
+</style>
+<div id='map'></div>
+<button id="fit" class="btn btn-warning mt-3">Fit to Singapore</button>
 
-        #map {
-            /* position: absolute;
-            top: 0;
-            bottom: 0;
-            width: 100%; */
-            height: 50vh;
-        }
-    </style>
-</head>
-<body>
-    <h1>VisitMe</h1>
-    <div id='map'></div>
-    <br>
-    <button id="fit">Fit to Singapore</button>
-    <a href="/logout"><button>Logout</button></a>
-    <!-- <style>
-        #fit {
-        display: block;
-        position: relative;
-        margin: 0px auto;
-        padding: 15px;
-        border: none;
-        border-radius: 3px;
-        font-size: 12px;
-        text-align: center;
-        color: #fff;
-        background: #ee8a65;
-        }
-    </style> -->
-    <script>
-        mapboxgl.accessToken = 'pk.eyJ1IjoiamVyZWxkbGltankiLCJhIjoiY2tqbnA3OW93MDBubjJycGs0cHpvM3kxcyJ9.HEU7FAlbGjqEJByAUP-A8g';
-        const map = new mapboxgl.Map({
-            container: 'map',
-            style: 'mapbox://styles/mapbox/streets-v11', // stylesheet location
-            center: [103.82, 1.364], // starting position [lng, lat]
-            zoom: 11.2, // starting zoom
-        });
+<!-- <style>
+    #fit {
+    display: block;
+    position: relative;
+    margin: 0px auto;
+    padding: 15px;
+    border: none;
+    border-radius: 3px;
+    font-size: 12px;
+    text-align: center;
+    color: #fff;
+    background: #ee8a65;
+    }
+</style> -->
 
-        // Add geolocate control to the map.
-        map.addControl(
-            new mapboxgl.GeolocateControl({
-                positionOptions: {
-                enableHighAccuracy: true
-            },
-                trackUserLocation: true
-            })
-        );
+<script>
+    mapboxgl.accessToken = 'pk.eyJ1IjoiamVyZWxkbGltankiLCJhIjoiY2tqbnA3OW93MDBubjJycGs0cHpvM3kxcyJ9.HEU7FAlbGjqEJByAUP-A8g';
+    const map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/outdoors-v11', // stylesheet location
+        center: [103.82, 1.364], // starting position [lng, lat]
+        zoom: 11, // starting zoom
+    });
 
-        document.getElementById('fit').addEventListener('click', function () {
-            map.fitBounds([
-                [103.6, 1.36],
-                [104.04, 1.36]
-            ]);
-        });
-    </script>
-</body>
-</html>
+    // Add geolocate control to the map
+    map.addControl(
+        new mapboxgl.GeolocateControl({
+            positionOptions: {
+            enableHighAccuracy: true
+        },
+            trackUserLocation: true
+        })
+    );
+
+    document.getElementById('fit').addEventListener('click', function () {
+        map.fitBounds([
+            [103.6, 1.26],
+            [104, 1.46]
+        ]);
+    });
+
+    // adding markers
+    const marker = new mapboxgl.Marker()
+        .setLngLat([103.8, 1.35])
+        .addTo(map);
+</script>
