--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,12 +9,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <% if (!currentUser) { %> 
         <li class="nav-item">
           <a class="nav-link" href="/login">Login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/signup">Sign Up</a>
         </li>
+        <% } else { %> 
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+        <% } %> 
       </ul>
     </div>
   </div>
