--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,6 @@
 <%- layout('layouts/boilerplate')  %>
+
+
 <style>
     #map {
         /* position: absolute;
@@ -8,7 +10,12 @@
         height: 60vh;
     }
 </style>
+
+
+<a href="/form" class="btn btn-primary btn-lg mb-3">Add User Form</a>
+
 <div id='map'></div>
+
 <button id="fit" class="btn btn-warning mt-3">Fit to Singapore</button>
 
 <!-- <style>
