--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,9 +59,9 @@
     });
 
     // adding markers
-    const marker = new mapboxgl.Marker()
-        .setLngLat([103.8, 1.35])
-        .addTo(map);
+    // const marker = new mapboxgl.Marker()
+    //     .setLngLat([103.8, 1.35])
+    //     .addTo(map);
     
     const test = <%- JSON.stringify(location) %>;
 
