--- a/views/form.ejs
+++ b/views/form.ejs
@@ -2,10 +2,10 @@
 
 <div class="row">
 	<div class="col-6 offset-3">
-		<form method="post" action="/form">
+		<form action="/form" method="POST">
 		  <div class="mb-3">
 		    <label for="exampleInputEmail1" class="form-label">Username to add</label>
-		    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="visit[userName]">
+		    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="visit[host]">
 		    <div id="emailHelp" class="form-text">Do ensure this is the correct username!</div>
 		  </div>
 		  <div class="mb-3">
