--- a/views/index.ejs
+++ b/views/index.ejs
@@ -104,7 +104,7 @@
     visits.forEach(visit => {
         const newMarker = new mapboxgl.Marker()
         .setLngLat(visit.host.location)
-        .setPopup(new mapboxgl.Popup().setHTML("<p>" + visit.details + "</p>"))
+        .setPopup(new mapboxgl.Popup().setHTML(`<h6>${visit.host.username}</h6><a href=${visit.host.link} target="blank">Visit Me</a><p>${visit.details}</p>`))
         .addTo(map)
     })
 </script>
