--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -21,6 +21,11 @@
                         <label for="postal" class="form-label">Postal Code</label>
                         <input type="number" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" id="postal" maxlength="6" name="postal" class="form-control" required>
                     </div>
+
+                    <div class="mb-3">
+                        <label for="zoom" class="form-label">Unique Zoom Link</label>
+                        <input type="string" id="zoom" name="link" class="form-control" required>
+                    </div>
                 
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
