--- a/views/form.ejs
+++ b/views/form.ejs
@@ -4,9 +4,9 @@
 	<div class="col-6 offset-3">
 		<form action="/form" method="POST">
 		  <div class="mb-3">
-		    <label for="exampleInputEmail1" class="form-label">Username to add</label>
-		    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="visit[host]">
-		    <div id="emailHelp" class="form-text">Do ensure this is the correct username!</div>
+		    <label for="username" class="form-label">Username to add</label>
+		    <input type="text" class="form-control" id="username" aria-describedby="username1" name="visit[host]">
+		    <div id="username1" class="form-text">Do ensure this is the correct username!</div>
 		  </div>
 		  <div class="mb-3">
 		    <label for="startTime" class="form-label">Start Time</label>
