--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,40 @@
     <h2 class="text-center">No visits scheduled... schedule one now!</h2>
 <% } %> 
 
+<div class="row mb-1">
+    <div class="col"></div>
+    <div class="col"><span class="d-block text-center fs-1 fw-bold">Visiting me!</span></div>
+    <div class="col"></div>
+</div>
+<% if (visits.length > 0) { %> 
+<table class="table table-striped table-hover text-center align-middle">
+    <thead>
+        <tr>
+            <th class="col">No.</th>
+            <th class="col">Host</th>
+            <th class="col">Details</th>
+            <th class="col">Start</th>
+            <th class="col">End</th>
+            <th class="col">Date</th>
+        </tr>
+        <tbody>
+            <% for (let i = 0; i < visits.length; i++) { %>
+                <tr>
+                    <th><%= i + 1 %></th>
+                    <td><%= visits[i].host.username %></td>
+                    <td><%= visits[i].details %></td>
+                    <td><%= visits[i].startTime.toLocaleTimeString() %></td>
+                    <td><%= visits[i].endTime.toLocaleTimeString() %></td>
+                    <td><%= visits[i].endTime.toLocaleDateString() %></td>
+                </tr>
+            <% } %>
+        </tbody>
+    </thead>
+</table>
+<% } else { %>
+    <h2 class="text-center">No one's visiting... for now!</h2>
+<% } %> 
+
 <div id='map'></div>
 
 <button id="fit" class="btn btn-warning my-3">Fit to Singapore</button>
