--- a/views/form.ejs
+++ b/views/form.ejs
@@ -20,7 +20,7 @@
 		  	<label class="form-text" for="details">Details</label>
 		    <textarea class="form-control" id="exampleCheck1" rows="3" name="visit[details]"></textarea> 
 		  </div>
-		  <button type="submit" class="btn btn-primary">Submit</button>
+		  <button type="submit" class="btn btn-success">Submit</button>
 		</form>
 	</div>
 </div>
