--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 
 <div class="row mb-1">
     <div class="col"></div>
-    <div class="col"><span class="d-block text-center fs-1 fw-bold">Schedule</span></div>
+    <div class="col"><span class="d-block text-center fs-1 fw-bold text-decoration-underline">Schedule</span></div>
     <div class="col text-end"><a href="/form" class="btn btn-primary mt-2">Add a new visit!</a></div>
 </div>
 <% if (visits.length > 0) { %> 
@@ -86,7 +86,7 @@
 
 <div id='map'></div>
 
-<button id="fit" class="btn btn-warning my-3">Fit to Singapore</button>
+<button id="fit" class="btn btn-danger my-3">Fit to Singapore</button>
 <!-- <style>
     #fit {
     display: block;
