--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-info">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-info">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
       <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="currentColor" class="bi bi-globe" viewBox="0 0 16 16">
