--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,5 @@
 <%- layout('layouts/boilerplate') %>
-<div class="row">
+<div class="row mb-5">
     <div class="col-4 offset-4">
         <div class="card">
             <div class="card-header text-center">
