--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 <div class="row mb-1">
     <div class="col"></div>
     <div class="col"><span class="d-block text-center fs-1 fw-bold text-decoration-underline">Schedule</span></div>
-    <div class="col text-end"><a href="/form" class="btn btn-primary mt-2">Add a new visit!</a></div>
+    <div class="col text-end"><a href="/form" class="btn mt-2 text-white fw-bold" style="background-color: #E46F44;">Add a new visit!</a></div>
 </div>
 <% if (visits.length > 0) { %> 
 <div class="row mb-1">
