--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<footer class="footer py-3 border-top mt-auto bg-white">
+<footer class="footer py-3 border-top mt-auto" style="background-color: #769ABE;">
     <div class="container">
-        <span class="text-secondary">&copy; 2021 visitMe | All Rights Reserved</span>
+        <span class="text-muted">&copy; 2021 visitMe | All Rights Reserved</span>
     </div>
 </footer>
