--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,5 +1,14 @@
 <%- layout('layouts/boilerplate')  %>
 
+<style>
+body {
+  background-image: url('https://png.pngtree.com/thumb_back/fh260/back_our/20190628/ourmid/pngtree-light-blue-background-image_264178.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
+
 <div class="row">
 	<div class="col-6 offset-3">
 		<form action="/form" method="POST">
