--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,13 @@
 <%- layout('layouts/boilerplate')  %>
 
+<style>
+body {
+  background-image: url('https://img.freepik.com/free-vector/watercolor-background_87374-69.jpg?size=626&ext=jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
 
 <style>
     #map {
