--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,14 @@
 <%- layout('layouts/boilerplate') %>
+
+<style>
+body {
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSA03u8qa3wUC16zQ3RLRB0eY9igIhxg3rz8g&usqp=CAU');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
+
 <div class="row">
     <div class="col-4 offset-4">
         <div class="card">
