--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 
 <style>
 body {
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSA03u8qa3wUC16zQ3RLRB0eY9igIhxg3rz8g&usqp=CAU');
+  background-image: url('https://t3.ftcdn.net/jpg/02/14/26/32/360_F_214263275_yFsy0Uk8QXxqp1vf31hHiJ0zKJwKdcoS.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
