sign up background

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,14 @@
 <%- layout('layouts/boilerplate') %>
+
+<style>
+    body {
+      background-image: url('https://t3.ftcdn.net/jpg/02/14/26/32/360_F_214263275_yFsy0Uk8QXxqp1vf31hHiJ0zKJwKdcoS.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+</style>
+
 <div class="row mb-5">
     <div class="col-4 offset-4">
         <div class="card">
